--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 
+<!-- Begin LaunchRock Widget -->
+<div id="lr-widget" rel="LWJG76QR"></div>
+<script type="text/javascript" src="//ignition.launchrock.com/ignition-current.min.js"></script>
+<!-- End LaunchRock Widget -->
+
 <head>
 	<meta charset="utf-8">
 	<title>Proyecto Carún</title>
